--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -5,11 +5,11 @@
             <div class="col-md-6 d-none d-md-block p-0">
                 <div class="header-info">
                     <i class="material-icons">map</i>
-                    <p>184 Main Collins Street</p>
+                    <p>change addr</p>
                 </div>
                 <div class="header-info">
                     <i class="material-icons">phone</i>
-                    <p>(965) 436 3274</p>
+                    <p>(+91) 9975336402</p>
                 </div>
             </div>
             <div class="col-md-6 text-left text-md-right p-0">
@@ -31,14 +31,14 @@
     </div>
     <div class="header-bottom">
         <a href="index.html" class="site-logo">
-            <img src="img/logo.png" alt="">
+            <img src="static/img/logo.png" alt="">
         </a>
         <div class="hb-right">
             <div class="hb-switch" id="search-switch">
-                <img src="img/icons/search.png" alt="">
+                <img src="static/img/icons/search.png" alt="">
             </div>
             <div class="hb-switch" id="infor-switch">
-                <img src="img/icons/bars.png" alt="">
+                <img src="static/img/icons/bars.png" alt="">
             </div>
         </div>
         <div class="container">
