add: git cmd in makefile

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -5,7 +5,7 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget">
                     <div class="about-widget">
-                        <img src="img/logo-3.png" alt="">
+                        <img src="static/img/logo-3.png" alt="">
                         <p>Lorem ipsum dolor sit amet, consec-tetur adipiscing elit sed.</p>
                         <ul>
                             <li><i class="material-icons">phone</i>(965) 436 3274</li>
@@ -48,7 +48,7 @@
                     </ul>
                     <form class="infor-form">
                         <input type="text" placeholder="Your Email">
-                        <button><img src="img/icons/send.png" alt=""></button>
+                        <button><img src="static/img/icons/send.png" alt=""></button>
                     </form>
                 </div>
             </div>
