add: page loading animation at start

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,6 +27,11 @@
 
 <body>
 
+    <!-- Page Preloder -->
+	<div id="preloder">
+		<div class="loader"></div>
+	</div>
+
     {% include "header.html" %}
 
     {% block content %}
