rm: language option in top

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -35,7 +35,7 @@
     {% include "header.html" %}
 
     {% block content %}
-    
+        <h1 align="center"> Inside the base.html </h1>
     {% endblock content %}
 
     {% include "footer.html" %}
