--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -8,8 +8,10 @@
                         <img src="static/img/logo-3.png" alt="">
                         <p>Lorem ipsum dolor sit amet, consec-tetur adipiscing elit sed.</p>
                         <ul>
-                            <li><i class="material-icons">phone</i>(965) 436 3274</li>
-                            <li><i class="material-icons">email</i>ahana.yoga@gmail.com</li>
+                            <li><i class="material-icons">phone</i>
+                                <a href="tel:919975336402">+91 99753 36402</a>
+                            </li>
+                            <li><i class="material-icons">email</i><a href="mailto:pkhade2865@gamil.com">newMail@gamil.com</a></li>
                             <li><i class="material-icons">map</i>184 Main Collins Street</li>
                         </ul>
                     </div>
