--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="header-info">
                     <i class="material-icons">phone</i>
-                    <p>(+91) 9975336402</p>
+                    <p><a href="tel:919975336402">+91 99753 36402</a></p>
                 </div>
             </div>
             <div class="col-md-6 text-left text-md-right p-0">
@@ -17,15 +17,17 @@
                     <i class="material-icons">alarm_on</i>
                     <p>Mon - Fri:  6:30am - 07:45pm</p>
                 </div>
-                <div class="header-info">
-                    <i class="material-icons">language</i>
-                    <select id="language" class="language-select">
-                        <option data-display="Language">EN</option>
-                        <option data-display="Language" value="1">ES</option>
-                        <option data-display="Language" value="2">JA</option>
-                        <option data-display="Language" value="2">AR</option>
-                    </select>
-                </div>
+                {% comment %} 
+                    <div class="header-info">
+                        <i class="material-icons">language</i>
+                        <select id="language" class="language-select">
+                            <option data-display="Language">EN</option>
+                            <option data-display="Language" value="1">ES</option>
+                            <option data-display="Language" value="2">JA</option>
+                            <option data-display="Language" value="2">AR</option>
+                        </select>
+                    </div> 
+                {% endcomment %}
             </div>
         </div>
     </div>
