fix: header position

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,7 +1,7 @@
 <!-- Header Section -->
 <header class="header-section">
     <div class="header-top">
-        <div class="row m-0">
+        <div class="row m-0" style="position:static">
             <div class="col-md-6 d-none d-md-block p-0">
                 <div class="header-info">
                     <i class="material-icons">map</i>
