--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,1 +1,146 @@
-{% include "base.html" %}
+{% extends "base.html" %}
+
+{% block content %}
+
+    <!-- Infor Model -->
+	<div class="infor-model-warp">
+		<div class="infor-model d-flex align-items-center">
+			<div class="infor-close">
+				<i class="material-icons">close</i>
+			</div>
+			<div class="infor-middle">
+				<a href="#" class="infor-logo">
+					<img src="static/img/logo-2.png" alt="">
+				</a>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+				<div class="insta-imgs">
+					<div class="insta-item">
+						<div class="insta-img">
+							<img src="static/img/infor/1.jpg" alt="">
+							<div class="insta-hover">
+								<i class="fa fa-instagram"></i>
+								<p>ahana.yoga</p>
+							</div>
+						</div>
+					</div>
+					<div class="insta-item">
+						<div class="insta-img">
+							<img src="static/img/infor/2.jpg" alt="">
+							<div class="insta-hover">
+								<i class="fa fa-instagram"></i>
+								<p>ahana.yoga</p>
+							</div>
+						</div>
+					</div>
+					<div class="insta-item">
+						<div class="insta-img">
+							<img src="static/img/infor/3.jpg" alt="">
+							<div class="insta-hover">
+								<i class="fa fa-instagram"></i>
+								<p>ahana.yoga</p>
+							</div>
+						</div>
+					</div>
+					<div class="insta-item">
+						<div class="insta-img">
+							<img src="static/img/infor/4.jpg" alt="">
+							<div class="insta-hover">
+								<i class="fa fa-instagram"></i>
+								<p>ahana.yoga</p>
+							</div>
+						</div>
+					</div>
+					<div class="insta-item">
+						<div class="insta-img">
+							<img src="static/img/infor/5.jpg" alt="">
+							<div class="insta-hover">
+								<i class="fa fa-instagram"></i>
+								<p>ahana.yoga</p>
+							</div>
+						</div>
+					</div>
+					<div class="insta-item">
+						<div class="insta-img">
+							<img src="static/img/infor/6.jpg" alt="">
+							<div class="insta-hover">
+								<i class="fa fa-instagram"></i>
+								<p>ahana.yoga</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<form class="infor-form">
+					<input type="text" placeholder="Your Email">
+					<button><img src="static/img/icons/send.png" alt=""></button>
+				</form>
+				<div class="insta-social">
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-instagram"></i></a>
+					<a href="#"><i class="fa fa-facebook"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Infor Model end -->
+
+    <!-- Hero Section -->
+	<section class="hero-section">
+		<div class="hero-social-warp">
+			<div class="hero-social">
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-instagram"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-linkedin"></i></a>
+			</div>
+		</div>
+		<div class="arrow-buttom">
+			<img src="static/img/icons/arrows-buttom.png" alt="">
+		</div>
+		<div class="hero-slider owl-carousel">
+			<div class="hs-item">
+				<div class="hs-style-1 text-center">
+					<img src="static/img/hero-slider/1.png" alt="">
+				</div>
+			</div>
+			<div class="hs-item">
+				<div class="hs-style-2">
+					<div class="container-fluid h-100">
+						<div class="row h-100">
+							<div class="col-lg-6 h-100 d-none d-lg-flex align-items-xl-end align-items-lg-center">
+								<div class="hs-img">
+									<img src="static/img/hero-slider/2.png" alt="">
+								</div>
+							</div>
+							<div class="col-lg-6 d-flex align-items-center">
+								<div class="hs-text-warp">
+									<div class="hs-text">
+										<h2>Get slim and toned with yoga</h2>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos-trud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+										<div class="site-btn sb-white">Register now</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="hs-item">
+				<div class="hs-style-3 text-center">
+					<div class="container">
+						<div class="hs-text">
+							<h2>Reduce your stress</h2>
+							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
+							<div class="site-btn sb-white">Register now</div>
+						</div>
+					</div>
+					<div class="hs-img">
+						<img src="static/img/hero-slider/3.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Hero Section end -->
+
+{% endblock content %}
