--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
+            {% comment %} <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget pl-0 pl-lg-5">
                     <h2 class="fw-title">Company</h2>
                     <ul>
@@ -40,7 +40,7 @@
                         <li><a href="#">Customer Service</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> {% endcomment %}
             <div class="col-lg-4 col-sm-6">
                 <div class="footer-widget pl-0 pl-lg-5">
                     <h2 class="fw-title">Open time</h2>
