--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -48,12 +48,14 @@
                         <li><i class="material-icons">alarm_on</i>Mon - Fri:  6:30am - 07:45pm</li>
                         <li><i class="material-icons">alarm_on</i>Sat - Sun:  8:30am - 05:45pm</li>
                     </ul>
-                    <form class="infor-form">
-                        <input type="text" placeholder="Your Email">
-                        <button><img src="static/img/icons/send.png" alt=""></button>
-                    </form>
                 </div>
             </div>
+            <span style="padding-top:65px">
+                <form class="infor-form">
+                    <input type="text" placeholder="Your Email">
+                    <button><img src="static/img/icons/send.png" alt=""></button>
+                </form>
+            </span>
         </div>
         <div class="footer-bottom">
             <div class="row">
