--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -32,8 +32,8 @@
         </div>
     </div>
     <div class="header-bottom">
-        <a href="index.html" class="site-logo">
-            <img src="static/img/logo.png" alt="">
+        <a href="" class="site-logo">
+            <img src="static/img/logo.png" alt="homepage">
         </a>
         <div class="hb-right">
             <div class="hb-switch" id="search-switch">
@@ -64,13 +64,13 @@
                         <li><a href="events.html">Our Events</a></li>
                         <li><a href="event-details.html">Events Details</a></li>
                     </ul>
-                </li>
+                {% comment %} </li>
                 <li><a href="blog.html">Blog</a>
                     <ul class="sub-menu">
                         <li><a href="blog.html">Our Blog</a></li>
                         <li><a href="single-blog.html">Blog Details</a></li>
                     </ul>
-                </li>
+                </li> {% endcomment %}
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
