--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -146,7 +146,7 @@
     <div class="container">
         <div class="section-title text-center">
             <img src="static/img/icons/logo-icon.png" alt="">
-            <h2>Welcome to Ahana</h2>
+            <h2>Welcome to Diksha's Fitness Studio</h2>
             <p>Practice Yoga to perfect physical beauty, take care of your soul and enjoy life more fully!</p>
         </div>
         <div class="row">
