add: contact page with contact.html
not loading css and js, need to updated href

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -71,7 +71,7 @@
                         <li><a href="single-blog.html">Blog Details</a></li>
                     </ul>
                 </li> {% endcomment %}
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact/">Contact</a></li>
             </ul>
         </div>
     </div>
