fix: not loading static files in contact
changed everywhere: load static

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -16,7 +16,7 @@ body {
 	height: 100%;
 	font-family: "Open Sans", sans-serif;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
+	/* font-smoothing: antialiased; */
 }
 
 h1,
