--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
 
 <!-- Infor Model -->
@@ -10,13 +12,13 @@
         </div>
         <div class="infor-middle">
             <a href="#" class="infor-logo">
-                <img src="static/img/logo-2.png" alt="">
+                <img src="{% static 'img/logo-2.png' %}" alt="">
             </a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <div class="insta-imgs">
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="static/img/infor/1.jpg" alt="">
+                        <img src="{% static 'img/infor/1.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>ahana.yoga</p>
@@ -25,7 +27,7 @@
                 </div>
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="static/img/infor/2.jpg" alt="">
+                        <img src="{% static 'img/infor/2.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>ahana.yoga</p>
@@ -34,7 +36,7 @@
                 </div>
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="static/img/infor/3.jpg" alt="">
+                        <img src="{% static 'img/infor/3.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>ahana.yoga</p>
@@ -43,7 +45,7 @@
                 </div>
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="static/img/infor/4.jpg" alt="">
+                        <img src="{% static 'img/infor/4.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>ahana.yoga</p>
@@ -52,7 +54,7 @@
                 </div>
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="static/img/infor/5.jpg" alt="">
+                        <img src="{% static 'img/infor/5.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>ahana.yoga</p>
@@ -61,7 +63,7 @@
                 </div>
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="static/img/infor/6.jpg" alt="">
+                        <img src="{% static 'img/infor/6.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>ahana.yoga</p>
@@ -71,7 +73,7 @@
             </div>
             <form class="infor-form">
                 <input type="text" placeholder="Your Email">
-                <button><img src="static/img/icons/send.png" alt=""></button>
+                <button><img src="{% static 'img/icons/send.png' %}" alt=""></button>
             </form>
             <div class="insta-social">
                 <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -85,7 +87,7 @@
 <!-- Infor Model end -->
                                                                               
 <!-- Page top Section -->
-<section class="page-top-section set-bg" data-setbg="img/page-top-bg.jpg">
+<section class="page-top-section set-bg" data-setbg="{% static 'img/page-top-bg.jpg' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-7 m-auto text-white">
