--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -10,16 +12,17 @@
 	<meta name="keywords" content="yoga, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="static/css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="static/css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="static/css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="static/css/nice-select.css"/>
-	<link rel="stylesheet" href="static/css/magnific-popup.css"/>
-	<link rel="stylesheet" href="static/css/slicknav.min.css"/>
-	<link rel="stylesheet" href="static/css/animate.css"/>
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/nice-select.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/slicknav.min.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/animate.css' %}"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="static/css/style.css"/>
+	<link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+	{% comment %} /home/prathamesh/projects/dikshas-fitness-studio/src/static/css/style.css {% endcomment %}
 
     {% block morehead %}  {% endblock morehead %}
 
@@ -44,13 +47,13 @@
 
 
     <!--====== Javascripts & Jquery ======-->
-	<script src="static/js/vendor/jquery-3.2.1.min.js"></script>
-	<script src="static/js/bootstrap.min.js"></script>
-	<script src="static/js/jquery.slicknav.min.js"></script>
-	<script src="static/js/owl.carousel.min.js"></script>
-	<script src="static/js/jquery.nice-select.min.js"></script>
-	<script src="static/js/jquery-ui.min.js"></script>
-	<script src="static/js/jquery.magnific-popup.min.js"></script>
-	<script src="static/js/main.js"></script>
+	<script src="{% static 'js/vendor/jquery-3.2.1.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/jquery.slicknav.min.js' %}"></script>
+	<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+	<script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+	<script src="{% static 'js/jquery-ui.min.js' %}"></script>
+	<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+	<script src="{% static 'js/main.js' %}"></script>
 
 </body>
