--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Footer Section -->
 <footer class="footer-section">
     <div class="container">
@@ -5,7 +7,7 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget">
                     <div class="about-widget">
-                        <img src="static/img/logo-3.png" alt="">
+                        <img src="{% static 'img/logo-3.png' %}" alt="">
                         <p>Lorem ipsum dolor sit amet, consec-tetur adipiscing elit sed.</p>
                         <ul>
                             <li><i class="material-icons">phone</i>
@@ -53,7 +55,7 @@
             <span style="padding-top:65px">
                 <form class="infor-form">
                     <input type="text" placeholder="Your Email">
-                    <button><img src="static/img/icons/send.png" alt=""></button>
+                    <button><img src="{% static 'img/icons/send.png' %}" alt=""></button>
                 </form>
             </span>
         </div>
