--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -73,7 +73,7 @@
                         <li><a href="single-blog.html">Blog Details</a></li>
                     </ul>
                 </li> {% endcomment %}
-                <li><a href="contact/">Contact</a></li>
+                <li><a href="/contact/">Contact</a></li>
             </ul>
         </div>
     </div>
