done: about page is now dynamic
Need to add:archivements, ImageField, bootstap files are not loading. \n [18/Apr/2024 05:14:48] GET /static/js/bootstrap.min.js.map HTTP/1.1 404 1828 \n
[18/Apr/2024 05:14:48] GET /static/css/bootstrap.min.css.map HTTP/1.1 404 1834

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -112,19 +112,19 @@
                     </div>
                 </div>
                 <div class="td-right">
-                    <h3>Olivia Richards</h3>
-                    <h6>Yoga Trainer</h6>
+                    <h3>{{name}}</h3>
+                    <h6>{{title}}</h6>
                     <ul>
-                        <li><strong>Experience:</strong><p>8 years</p></li>
-                        <li><strong>Email:</strong><p>emily-walker@example.com</p></li>
-                        <li><strong>Biography:</strong><p>Certification from the National Institute of Sports Medicine (NASM) USA. 25 years of sports training in the United States, Germany, Hong Kong, Malaysia, Singapore, and now Vietnam at California Fitness & Yoga Centers.</p></li>
+                        <li><strong>Experience:</strong><p>{{experience}} years</p></li>
+                        <li><strong>Email:</strong><p>{{email}}</p></li>
+                        <li><strong>Biography:</strong><p>{{bio}}</p></li>
                     </ul>
                     <a href="#" class="site-btn sb-gradient">View classes</a>
                 </div>
             </div>
             <div class="trainer-details-text">
-                <h3>About Yoga</h3>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                <h3>{{paragraph_title}}</h3>
+                <p>{{paragraph_description}}</p>
                 <ul>
                     <li><i class="material-icons">check_circle</i>Gold Medal for International Yoga Championship 2012.</li>
                     <li><i class="material-icons">check_circle</i>Silver Medal of All High Schools Championship and Indian Yoga Club in 2010.</li>
