add: dynamic hyperlink to the email at about.html

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -116,7 +116,7 @@
                     <h6>{{title}}</h6>
                     <ul>
                         <li><strong>Experience:</strong><p>{{experience}} years</p></li>
-                        <li><strong>Email:</strong><p>{{email}}</p></li>
+                        <li><strong>Email:</strong><a href="mailto:{{email}}"><p>{{email}}</p></a></li>
                         <li><strong>Biography:</strong><p>{{bio}}</p></li>
                     </ul>
                     <a href="#" class="site-btn sb-gradient">View classes</a>
