--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -107,7 +107,7 @@
                     <div class="td-social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-youtube"></i></a>
                         <a href="#"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
