--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -36,20 +36,10 @@
         </div>
         <div class="container">
             <ul class="main-menu">
-                <li><a href="{% url "homepage" %}" class="{% if request.path == '/' %} active {% endif %}">Home</a></li>
-                <li><a href="{% url "about" %}" class="{% if request.path == '/about/' %} active {% endif %}">About</a></li>
-                <li><a href="classes.html">Classes</a>
-                    <ul class="sub-menu">
-                        <li><a href="classes.html">Our Claasses</a></li>
-                        <li><a href="classes-details.html">Claasses Details</a></li>
-                    </ul>
-                </li>
-                <li><a href="events.html">events</a>
-                    <ul class="sub-menu">
-                        <li><a href="events.html">Our Events</a></li>
-                        <li><a href="event-details.html">Events Details</a></li>
-                    </ul>
-                <li><a href="{% url "contact" %}" class="{% if request.path == '/contact/' %} active {% endif %}">Contact</a></li>
+                <li><a href="{% url 'homepage' %}" class="{% if request.path == '/' %} active {% endif %}">Home</a></li>
+                <li><a href="{% url 'about' %}" class="{% if request.path == '/about/' %} active {% endif %}">About</a></li>
+                <li><a href="{% url 'classes' %}" class="{% if request.path == '/classes/' %} active {% endif %}">Classes</a>
+                <li><a href="{% url 'contact' %}" class="{% if request.path == '/contact/' %} active {% endif %}">Contact</a></li>
             </ul>
         </div>
     </div>
