--- a/src/templates/classes.html
+++ b/src/templates/classes.html
@@ -21,20 +21,6 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-9">
-                <div class="classes-top">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>Showing 8 classes of 30 classes</p>
-                        </div>
-                        <div class="col-md-6">
-                            <select class="circle-select">
-                                <option data-display="Default Sorting">Default Sorting</option>
-                                <option value="2">Oldest</option>
-                                <option value="2">Newest</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="classes-item-warp">
@@ -199,101 +185,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="site-pagination pt-3">
-                    <a href="#" class="active">1</a>
-                    <a href="#">2</a>
-                    <a href="#"><i class="material-icons">keyboard_arrow_right</i></a>
-                </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-8 sidebar">
-                <div class="sb-widget">
-                    <h2 class="sb-title">Search Classes</h2>
-                    <form class="classes-filter">
-                        <select class="circle-select">
-                            <option data-display="Choose Category">Choose Category</option>
-                            <option value="1">Category 1</option>
-                            <option value="2">Category 2</option>
-                        </select>
-                        <select class="circle-select">
-                            <option data-display="Choose Level">Choose Level</option>
-                            <option value="1">Level 1</option>
-                            <option value="2">Level 2</option>
-                        </select>
-                        <select class="circle-select">
-                            <option data-display="Choose Trainer">Choose Trainer</option>
-                            <option value="2">Name</option>
-                        </select>
-                        <h3>Filter by Day</h3>
-                        <div class="cf-cal">
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="monday">
-                                <label for="monday">Monday</label>
-                            </div>
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="tuesday">
-                                <label for="tuesday">Tuesday</label>
-                            </div>
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="wednesday">
-                                <label for="wednesday">Wednesday</label>
-                            </div>
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="thurstday">
-                                <label for="thurstday">Thurstday</label>
-                            </div>
-                        </div>
-                        <div class="cf-cal">
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="friday">
-                                <label for="friday">Friday</label>
-                            </div>
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="saturday">
-                                <label for="saturday">Saturday</label>
-                            </div>
-                            <div class="cf-radio">
-                                <input type="checkbox" name="sc" id="sunday">
-                                <label for="sunday">Sunday</label>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <button class="site-btn sb-gradient">Filter now</button>
-                    </form>
-                </div>
-                <div class="sb-widget">
-                    <h2 class="sb-title">Popular Classes</h2>
-                    <div class="popular-classes-widget owl-carousel">
-                        <div class="pc-item">
-                            <div class="pc-thumb set-bg" data-setbg="{% static 'img/event/1.jpg' %}"></div>
-                            <div class="pc-text">
-                                <h4><a href="#">Yoga Balance</a></h4>
-                                <ul>
-                                    <li><i class="material-icons">event_available</i>Mon, Wed, Fri</li>
-                                    <li><i class="material-icons">alarm_on</i>06:30pm - 07:45pm</li>
-                                    <li><i class="material-icons">person_outline</i>Carolyn Berry</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="pc-item">
-                            <div class="pc-thumb set-bg" data-setbg="{% static 'img/event/2.jpg' %}"></div>
-                            <div class="pc-text">
-                                <h4><a href="#">Yoga Balance</a></h4>
-                                <ul>
-                                    <li><i class="material-icons">event_available</i>Mon, Wed, Fri</li>
-                                    <li><i class="material-icons">alarm_on</i>06:30pm - 07:45pm</li>
-                                    <li><i class="material-icons">person_outline</i>Carolyn Berry</li>
-                                </ul>
-                            </div>
+            {% comment %}  YOUTUBE VIDEIOS
+                <div class="col-lg-3 col-md-5 col-sm-8 sidebar">
+                    <div class="sb-widget">
+                        <div class="sb-video">
+                            <img src="{% static 'img/video.jpg' %}" alt="">
+                            <a href="https://www.youtube.com/watch?v=vgv-hzTl5FA" class="video-popup"><img src="{% static 'img/icons/play.png' %}" alt=""></a>
                         </div>
                     </div>
-                </div>
-                <div class="sb-widget">
-                    <div class="sb-video">
-                        <img src="{% static 'img/video.jpg' %}" alt="">
-                        <a href="https://www.youtube.com/watch?v=vgv-hzTl5FA" class="video-popup"><img src="{% static 'img/icons/play.png' %}" alt=""></a>
-                    </div>
-                </div>
-            </div>
+                </div> 
+            {% endcomment %}
         </div>
     </div>
 </section>
