err: need to fix for loop in classes.html

--- a/src/templates/classes.html
+++ b/src/templates/classes.html
@@ -51,6 +51,11 @@
                     </div>
                 </div> 
             {% endcomment %}
+
+            {% for x in range(1,3) %}
+                <p>{{ data.x }}</p>
+            {% endfor %}
+
         </div>
     </div>
 </section>
