--- a/src/templates/classes.html
+++ b/src/templates/classes.html
@@ -22,22 +22,22 @@
         <div class="row">
             <div class="col-lg-9">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6"> {% for key, value in data.items %}
                         <div class="classes-item-warp">
                             <div class="classes-item">
                                 <div class="ci-img">
                                     <img src="{% static 'img/classes/3.jpg' %}" alt="">
                                 </div>
                                 <div class="ci-text">
-                                    <h4>Yoga Therapy</h4>
+					<h4>{{ key.title }}</h4>
                                     <div class="ci-metas">
-                                        <div class="ci-meta"><i class="material-icons">event_available</i>Mon, Wed, Fri</div>
-                                        <div class="ci-meta"><i class="material-icons">alarm_on</i>06:30pm - 07:45pm</div>
+					    <div class="ci-meta"><i class="material-icons">event_available</i>{{ value.week }}</div>
+					    <div class="ci-meta"><i class="material-icons">alarm_on</i>{{ value.time }}</div>
                                     </div>
-                                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis</p>
+				    <p>{{ value.description }}</p>
                                 </div>
-                            </div>
-                        </div>
+                            </div> 
+			</div>  {% endfor %}
                     </div>
                 </div>
             </div>
@@ -52,8 +52,8 @@
                 </div> 
             {% endcomment %}
 
-            {% for x in range(1,3) %}
-                <p>{{ data.x }}</p>
+            {% for key, value in data.items %}
+	    {{ value.week }} <br>
             {% endfor %}
 
         </div>
