add: quotes in heading of contact page

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-lg-7 m-auto text-white">
                 <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>"Ready to sweat, smile, and achieve? Your fitness journey begins here. We're with you every step of the way. Contact us today!"</p>
             </div>
         </div>
     </div>
@@ -106,7 +106,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="con-info">
-                    <h3>Visit the Yoga Ahana</h3>
+                    <h3>Visit the Studio</h3>
                     <ul>
                         <li><i class="material-icons">map</i>184 Main Collins Street</li>
                     </ul>
