Added CSIBER url to Footer.html

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -69,11 +69,11 @@
                         <a href="#"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-                <div class="col-md-8 text-md-right">
-                    <div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            <div class="col-md-8 text-md-right">
+                <div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This project is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.siberindia.edu.in/" target="_blank">CSIBER</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-                </div>
+            </div>
             </div>
         </div>
     </div>
